--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="1F2937" />
+
     <title>Portfolio</title>
   </head>
   <body class=" dark">
