--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#1F2937" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="msappliaction-navbutton-color" content="#000000">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     <title>Portfolio</title>
   </head>
