--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./src/assets/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="https://i.postimg.cc/tggVYcsv/360-F-323953259-7ks-Fgmt-G8-Vhy58-Cwh5h-YHbr-Cz4-HMv-UIt-fotor-20230819214749.png" type="image/x-icon" />
     
 
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
